[metadata]
name = app-run-awesomewithrex
version = 0.0.1
author = AwesomeWithRex
description = Send it!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AwesomeWithRex/AppRun.py
project_urls =
    Bug Tracker = https://github.com/AwesomeWithRex/AppRun.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
